fixed white space on the right side of the screen

--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,17 @@
 ::after {
   box-sizing: border-box;
 }
+@font-face {
+  font-family: "Perfect Dark (BRK)";
+  src: url("/fonts/pdark.ttf");
+}
 
 /* ---------- root variables ---------- */
 :root {
   --black: #222;
   --grey: #333;
-  --light-green: #;
-  --light-grey: #;
+  --blue: #6b37e2;
+  --light-blue: #b194f5;
   --text-color-light: #f1f1f1;
   --text-color-dark: #333;
   --white: #fff;
@@ -23,29 +27,38 @@ html {
   font-family: var(--font-family);
   height: 100%;
   width: 100%;
+  margin: 0px;
+  padding: 0px;
   background-color: var(--black);
   overflow-x: hidden;
 }
 
-body {
-  margin: 0;
+html body {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
-h1 {
-  font-size: 2em;
-  font-weight: 400;
-  letter-spacing: 3px;
+h2 {
+  font-family: "Perfect Dark (BRK)";
+  font-size: 4em;
+  color: var(--blue);
 }
 
 h3 {
-  font-weight: 400;
-  letter-spacing: 1px;
+  font-family: "Perfect Dark (BRK)";
+  font-size: 3em;
   margin: 0.5em 0 0.2em;
 }
 
 img {
-  width: 100%;
+  width: 80%;
   height: auto;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 p {
@@ -54,19 +67,17 @@ p {
 
 /* ---------- navigation styling ---------- */
 .main-navigation {
-  position: absolute;
+  position: fixed;
   z-index: 50;
   width: 100%;
   top: 0;
   left: 0;
-  height: 9%;
 }
 
 .main-nav {
   display: flex;
-  justify-content: space-between;
   height: 5em;
-  margin: 0 10%;
+  margin: 0;
 }
 
 .nav-items {
@@ -79,29 +90,43 @@ p {
 
 .nav-items a {
   text-decoration: none;
-  color: white;
+  position: relative;
+  left: 10px;
+  color: var(--text-color-light);
   margin: 0;
   font-size: 1em;
 }
 
 .nav-items a:hover {
   cursor: pointer;
-  color: #888;
+  color: var(--blue);
 }
 
 .icons {
   display: flex;
+  position: relative;
   align-items: center;
+  justify-items: center;
+  margin: 0;
+}
+.icons a {
+  margin: auto;
 }
 
 .icons img {
   width: 40px;
-  height: 40px;
+  height: auto;
   margin-left: 10px;
 }
 
-.icons span {
-  margin-left: 40px;
+.span {
+  position: relative;
+}
+
+.span img {
+  margin-left: 10px;
+  height: 40px;
+  width: auto;
 }
 
 /* ---- overlay ----*/
@@ -140,7 +165,7 @@ p {
 
 .overlay a:hover,
 .overlay a:focus {
-  color: #6b37e2;
+  color: var(--blue);
 }
 
 .overlay .closebtn {
@@ -164,8 +189,7 @@ p {
 /* ---------- page styling ---------- */
 .page {
   display: none;
-  /*min heigh is screen heigh minus height of tab and top bar */
-  min-height: calc(100vh - 110px);
+  min-height: 100vh;
   animation: fadeIn 0.4s;
 }
 
@@ -192,6 +216,24 @@ p {
   top: 50%;
   transform: translate(-50%, -50%);
   margin-left: 10%;
+  margin-right: 15%;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  margin-top: 100px;
+  background: var(--blue);
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--light-bluet);
+  text-align: center;
+  padding: 1em;
+}
+
+.button:hover {
+  background: var(--light-blue);
+  color: var(--blue);
 }
 
 .section-projects,
@@ -202,6 +244,39 @@ p {
   flex-direction: row;
 }
 
+@media only screen and (max-width: 820px) {
+  .section {
+    height: 150vh;
+  }
+
+  .section-main {
+    height: 100vh;
+  }
+
+  .section-projects,
+  .section-about,
+  .section-contact,
+  .section-me {
+    flex-direction: column;
+  }
+
+  .img-div {
+    max-height: 50%;
+    width: 100%;
+    margin: 0;
+  }
+  .text-side {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 80px;
+  }
+
+  .text-block {
+    width: 100%;
+    padding: 0 5%;
+  }
+}
+/* contact section */
 .email {
   padding: 30px 0;
   text-decoration: none;
@@ -212,7 +287,7 @@ p {
 }
 .email:hover,
 .email:focus {
-  color: #6b37e2;
+  color: var(--blue);
 }
 
 /* start section styling */
@@ -231,14 +306,84 @@ p {
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: -1;
-  height: 90%;
+  height: 100%;
   width: auto;
+}
+
+.section-main h1 {
+  font-family: "Perfect Dark (BRK)";
+  font-size: 4.5em;
+  margin: 0.5em auto;
+  white-space: nowrap;
+}
+
+@media only screen and (max-width: 820px) {
+  .section-main h1 {
+    white-space: pre-wrap;
+    font-size: 3em;
+  }
+  .section-main div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+
+  .section-main h2,
+  .section-main h3 {
+    font-size: 1em;
+    white-space: nowrap;
+  }
+
+  .section-main img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.section-main h2 {
+  font-family: var(--font-family);
+  color: var(--text-color-light);
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.section-main h3 {
+  font-family: var(--font-family);
+  font-size: 2em;
+  font-weight: 400;
 }
 
 /*-------------- about page styling ----------------*/
 
 .section-me {
   height: 100vh;
+}
+
+.icon-line {
+  width: 100%;
+  height: 80px;
+  background: var(--blue);
+}
+.icon-line-bottom {
+  width: 100%;
+  height: 80px;
+  background: var(--light-blue);
+}
+
+.about-header {
+  text-align: center;
+  margin: 200px auto 50px;
+}
+
+.skills-text {
+  width: 50%;
+  margin: 100px auto 50px;
+}
+
+.skills-text p {
+  max-width: 90%;
 }
 
 /* ---------- animations ---------- */
